fix(form): adds rule to prevent overflow

--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -90,6 +90,10 @@ $form-radio-size: $form-checkbox-size;
         }
       }
     }
+
+    .row {
+      overflow: hidden;
+    }
   }
 }
 
